# proofatlas

./: .env  .env.template  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  PERFORMANCE_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  counter_model.py  create_dataset.py  environment.lock.yml  environment.yml  evaluate.py  experiments.ipynb  generalization.py  generate_data.ipynb  generate_data.py  gnn.py  initialize_problems.py  mapping.json  mapping.txt  overfit.ipynb  overfit.py  problems.txt  pyproject.toml  requirements-dev.txt  requirements.txt  rng025_proof_corrected.txt  run.sh  select_problems.py  setup.py  setup.sh  solve_problems.py  solve_problems_mixed.py  test_install.py  train.py  (+7 more)
crates/proofatlas/: Cargo.toml
crates/proofatlas-wasm/: Cargo.toml
crates/proofatlas-wasm/src/: lib.rs
crates/proofatlas-wasm/tests/: wasm_tests.rs
crates/proofatlas/examples/: dump_events.rs
crates/proofatlas/src/: README.md  atlas.rs  clause_manager.rs  config.rs  json.rs  lib.rs  prover.rs  python_bindings.rs  state.rs  trace.rs
crates/proofatlas/src/core/: clause.rs  json.rs  literal.rs  mod.rs  proof.rs  term.rs  trace.rs
crates/proofatlas/src/fol/: clause.rs  literal.rs  mod.rs  ordering.rs  substitution.rs  term.rs
crates/proofatlas/src/generating/: common.rs  equality_factoring.rs  equality_resolution.rs  factoring.rs  mod.rs  resolution.rs  superposition.rs
crates/proofatlas/src/index/: disc_tree.rs  discrimination_tree.rs  feature_vector.rs  mod.rs  selected_literals.rs  subsumption.rs
crates/proofatlas/src/inference/: common.rs  demodulation.rs  derivation.rs  equality_factoring.rs  equality_resolution.rs  factoring.rs  literal_selection.rs  mod.rs  proof.rs  resolution.rs  superposition.rs
crates/proofatlas/src/logic/: clause_manager.rs  interner.rs  literal_selection.rs  mod.rs  time_compat.rs
crates/proofatlas/src/ml/: graph.rs  mod.rs  proof_trace.rs
crates/proofatlas/src/parser/: cnf_conversion.rs  fof.rs  mod.rs  orient_equalities.rs  tptp.rs
crates/proofatlas/src/prover/: mod.rs  profile.rs  trace.rs
crates/proofatlas/test_traces/: inverse_of_identity.trace  inverse_of_inverse.trace  onnx_right_identity.trace  onnx_uniqueness_of_inverse.trace  right_identity.trace  right_inverse.trace  torch_right_identity.trace  torch_uniqueness_of_inverse.trace  uniqueness_of_identity.trace  uniqueness_of_inverse.trace
crates/proofatlas/tests/: README.md  basic_test.rs  test_calculus_compliance.rs  test_group_theory.rs  test_krs065_bug.rs  test_literal_selection.rs  test_proof_verification.rs  test_selection_behavior.rs  test_sentence_weights.rs  test_tptp_regression.rs
rust/: ARRAY_IMPLEMENTATION_2024.md  BOX_ARRAY_IMPLEMENTATION.md  CHANGELOG.md  CLEANUP_SUMMARY.md  Cargo.toml  README.md  TEST_UPDATE_SUMMARY.md  ZERO_COPY_STATUS.md  cleanup_superfluous_files.sh  correct_trace_100_steps.txt  fix_rules_tests.sh  test_equivalence.rs  test_parser.py
rust/docs/: demodulation.md  selection_strategies.md  subsumption.md
rust/src/: README.md  lib.rs  python_bindings.rs  time_compat.rs
rust/src/array_repr/: builder.rs  builder_tests.rs  mod.rs  rules.rs  rules_tests.rs  saturation.rs  saturation_tests.rs  symbol_table.rs  symbol_table_tests.rs  types.rs  types_tests.rs  unification.rs  unification_tests.rs
rust/src/bindings/: mod.rs
rust/src/core/: builder.rs  clause.rs  error.rs  json.rs  literal.rs  logic.rs  mod.rs  ordering.rs  parser_convert.rs  problem.rs  problem_tests.rs  proof.rs  proof_event.rs  proof_tests.rs  substitution.rs  symbol_table.rs  symbol_table_tests.rs  term.rs  test_ordering_stability.rs
rust/src/fileformats/: fof.rs  mod.rs  tptp.rs  tptp_parser.rs
rust/src/inference/: common.rs  demodulation.rs  equality_factoring.rs  equality_resolution.rs  factoring.rs  mod.rs  resolution.rs  subsumption_resolution.rs  superposition.rs
rust/src/ml/: graph.rs  inference.rs  mod.rs  proof_trace.rs  weights.rs
rust/src/parser/: cnf_conversion.rs  fof.rs  mod.rs  orient_equalities.rs  prescan.rs  tptp.rs
rust/src/parsing/: fof.rs  mod.rs  parse_types.rs  prescan.rs  tptp.rs  tptp_parser.rs
rust/src/proofs/: mod.rs  proof.rs  proof_tests.rs  state.rs  state_tests.rs
rust/src/python/: array_bindings.rs  binding_tests.rs  core.rs  mod.rs  parser.rs  proofs.rs  types.rs
rust/src/rules/: common.rs  equality_factoring.rs  equality_resolution.rs  factoring.rs  failure_tests.rs  mod.rs  resolution.rs  superposition.rs  tests.rs  variable_sharing_tests.rs
rust/src/saturation/: clause_selection.rs  custom.rs  literal_selection.rs  loop.rs  mod.rs  simplification.rs  state.rs  subsumption.rs  unification.rs
rust/src/selection/: burn_gcn.rs  burn_mlp.rs  clause.rs  literal.rs  max_weight.rs  mod.rs
rust/src/selectors/: age_weight.rs  clause.rs
rust/src/unification/: match.rs  mgu.rs  mod.rs
rust/test_problems/: GRP001-1-expanded.tptp  equality_test.tptp  fof_test.tptp  modus_ponens.tptp  prop_test.tptp  simple_3ary.tptp  simple_contradiction.tptp  simple_equality.tptp  simple_fof.tptp  simple_group.tptp  simple_puzzle.tptp  simple_resolution.tptp  test_include.tptp  unsat_prop.tptp
rust/test_traces/: inverse_of_identity.trace  inverse_of_inverse.trace  onnx_right_identity.trace  onnx_uniqueness_of_inverse.trace  right_identity.trace  right_inverse.trace  uniqueness_of_identity.trace  uniqueness_of_inverse.trace
rust/tests/: README.md  basic_test.rs  integration_test.rs  simple_zero_copy_test.py  test_calculus_compliance.rs  test_freeze_zero_copy.py  test_group_theory.rs  test_literal_selection.rs  test_onnx_proving.rs  test_selection_behavior.rs  zero_copy_test.py
rust/tests/problems/: uniqueness_of_identity.p
wasm/: Cargo.toml  DEPLOYMENT.md  README.md  app.js  benchmark_problems.json  benchmarks.html  build.sh  docs-style.css  docs.html  index.html  results.html  serve.py  style.css  training.html
wasm/data/: benchmarks.json
wasm/examples/: inverse_of_identity.p
wasm/models/: clause_selector.onnx
wasm/pkg/: proofatlas_wasm.js  proofatlas_wasm_bg.wasm
wasm/src/: lib.rs
(+734 files in other folders)
