[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-rust>=1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proofatlas"
version = "0.2.0"
description = "High-performance theorem prover for first-order logic"
authors = [{name = "ProofAtlas Contributors"}]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
keywords = ["theorem-proving", "automated-reasoning", "logic", "first-order-logic", "ATP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]

# Core dependencies (minimal for the theorem prover)
dependencies = [
    "tqdm",
]

[project.scripts]
proofatlas-prove = "proofatlas.cli.prove:main"
proofatlas-bench = "proofatlas.cli.bench:main"
proofatlas-export = "proofatlas.cli.export:main"
proofatlas-train = "proofatlas.cli.train:main"

[project.urls]
Homepage = "https://github.com/lexpk/proofatlas"
Documentation = "https://github.com/lexpk/proofatlas/blob/main/README.md"
Repository = "https://github.com/lexpk/proofatlas"
Issues = "https://github.com/lexpk/proofatlas/issues"

[project.optional-dependencies]
# For ML model training (not needed for inference - weights downloaded automatically)
ml = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "safetensors",
]

dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-benchmark",
    "black",
    "mypy",
    "types-setuptools",
    "ruff",
]

examples = [
    "matplotlib>=3.0",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["python"]
include = ["proofatlas*"]
namespaces = false

[tool.setuptools.package-data]
proofatlas = ["*.so", "*.pyd", "*.dylib"]

[[tool.setuptools-rust.ext-modules]]
target = "proofatlas.proofatlas"
path = "crates/proofatlas/Cargo.toml"
binding = "PyO3"
features = ["python"]

[tool.ruff]
line-length = 100
target-version = "py37"
extend-exclude = ["crates/"]

[tool.black]
line-length = 100
target-version = ['py37']
extend-exclude = "crates/"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
exclude = ["crates/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]