[build-system]
requires = ["maturin>=1.0,<2.0", "torch>=2.9"]
build-backend = "maturin"

[project]
name = "proofatlas"
version = "0.2.0a1"
description = "High-performance theorem prover for first-order logic"
authors = [{name = "ProofAtlas Contributors"}]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = ["theorem-proving", "automated-reasoning", "logic", "first-order-logic", "ATP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies
dependencies = [
    "numpy",
    "tqdm",
    "torch>=2.9",
]

[project.scripts]
proofatlas = "proofatlas.cli.prove:main"
proofatlas-bench = "proofatlas.cli.bench:main"
proofatlas-web = "proofatlas.cli.web:main"

[project.urls]
Homepage = "https://github.com/lexpk/proofatlas"
Documentation = "https://github.com/lexpk/proofatlas/blob/main/README.md"
Repository = "https://github.com/lexpk/proofatlas"
Issues = "https://github.com/lexpk/proofatlas/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-benchmark",
    "black",
    "mypy",
    "ruff",
]

[tool.maturin]
manifest-path = "crates/proofatlas/Cargo.toml"
python-source = "python"
module-name = "proofatlas.proofatlas"

[tool.ruff]
line-length = 100
extend-exclude = ["crates/"]

[tool.black]
line-length = 100
extend-exclude = "crates/"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = ["crates/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
