[package]
name = "proofatlas"
version = "0.2.0"
edition = "2021"
authors = ["ProofAtlas Contributors"]
description = "High-performance theorem proving using superposition calculus"

[lib]
name = "proofatlas"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Parser
nom = "7"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
numpy = { version = "0.20", optional = true }

# ML inference with tract (pure Rust ONNX runtime, WASM compatible)
tract-onnx = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Performance", "Window"] }

[features]
default = []
python = ["pyo3", "numpy"]
# WASM needs getrandom-js for tract's random number generation
wasm = ["tract-onnx/getrandom-js"]

[dev-dependencies]
# criterion = "0.5"  # Commented out due to rustc version requirements

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "prove_json"
path = "src/bin/prove_json.rs"

[[bin]]
name = "test_onnx"
path = "src/bin/test_onnx.rs"