[package]
name = "proofatlas"
version = "0.2.0"
edition = "2021"
authors = ["ProofAtlas Contributors"]
description = "High-performance theorem proving using superposition calculus"

[lib]
name = "proofatlas"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Parser
nom = "7"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
numpy = { version = "0.20", optional = true }

# Burn ML framework (for native inference with safetensors weights)
burn = "0.19"
burn-ndarray = "0.19"
burn-import = "0.19"

# Model weight downloading (native only, not wasm)
ureq = { version = "2.9", features = ["json"], optional = true }
dirs = { version = "5.0", optional = true }
sha2 = { version = "0.10", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Performance", "Window"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["download"]
python = ["pyo3", "numpy", "download"]
download = ["ureq", "dirs", "sha2"]
wasm = []

[dev-dependencies]
# criterion = "0.5"  # Commented out due to rustc version requirements

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "prove_json"
path = "src/bin/prove_json.rs"