[package]
name = "proofatlas-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
proofatlas = { path = "../rust", default-features = false, features = ["wasm"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Performance", "Window", "console"] }
js-sys = "=0.3.77"
# Required for Burn's dependency chain in WASM
getrandom = { version = "0.3", features = ["wasm_js"] }

# Optimize for small code size
[profile.release]
opt-level = "z"
lto = true