[package]
name = "proofatlas-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
proofatlas = { path = "../proofatlas", default-features = false, features = ["wasm"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Performance", "Window", "console"] }
js-sys = "=0.3.77"
# Required for random number generation in WASM
getrandom = { version = "0.3", features = ["wasm_js"] }