[package]
name = "proofatlas"
version = "0.2.0"
edition = "2021"
authors = ["ProofAtlas Contributors"]
description = "High-performance theorem proving using superposition calculus"

[lib]
name = "proofatlas"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Parser
nom = "7"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

# PyTorch bindings (for GPU inference via libtorch)
tch = { version = ">=0.22", optional = true }

# Tokenizers (for sentence encoder)
tokenizers = { version = "0.20", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Performance", "Window"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["python", "ml"]
python = ["pyo3", "numpy"]
ml = ["tch", "tokenizers"]
wasm = []

[dev-dependencies]
# criterion = "0.5"  # Commented out due to rustc version requirements