[package]
name = "proofatlas"
version = "0.2.0"
edition = "2021"
authors = ["ProofAtlas Contributors"]
description = "High-performance theorem proving using superposition calculus"

[lib]
name = "proofatlas"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Unix signal handling (diagnostics)
libc = "0.2"

# Parser
nom = "7"

# Ordered sets with O(1) removal
indexmap = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

# PyTorch bindings (for GPU inference via libtorch)
tch = { version = ">=0.22", optional = true }

# Tokenizers (for sentence encoder)
tokenizers = { version = "0.20", optional = true }

# NPZ trace writing
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Performance", "Window"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["python", "ml"]
python = ["pyo3", "numpy"]
ml = ["tch", "tokenizers"]
wasm = []

[dev-dependencies]